--- a/ShoppingApp/Base.lproj/Main.storyboard
+++ b/ShoppingApp/Base.lproj/Main.storyboard
@@ -1,24 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginViewController" customModule="ShoppingApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="epC-V7-2G6">
+                                <rect key="frame" x="168.5" y="318.5" width="38" height="30"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <segue destination="rKy-0T-0uF" kind="show" id="aUr-bo-YvF"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.77005018660000002" blue="0.85192052959999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="epC-V7-2G6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9G2-My-CF5"/>
+                            <constraint firstItem="epC-V7-2G6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fNb-CR-3Ln"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-919" y="82"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="diU-cJ-hUg">
+            <objects>
+                <viewController id="Vud-us-1A1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KBz-gf-AYq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.77545040005910548" blue="0.53884571209184129" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="tDX-wm-Ptx"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="CKc-LB-1jv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O5a-Nd-dYI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="841" y="511"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="9N1-wn-TbP">
+            <objects>
+                <viewController id="who-x7-Smx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qxq-to-OrF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.83950753708422543" green="1" blue="0.75966515490953168" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="EAz-sa-GH5"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Fxh-Jz-qv7"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eNW-8E-XCT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-114" y="836"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ONQ-lI-rFp">
+            <objects>
+                <viewController id="ujb-n7-gkb" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2d5-q8-Qj6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Tt-ZM-Thv">
+                                <rect key="frame" x="164.5" y="318.5" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="iHR-02-HIi" kind="show" id="Hb6-f2-GlV"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96620899439999997" green="0.92001281030000004" blue="0.51389123739999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="2Tt-ZM-Thv" firstAttribute="centerX" secondItem="2d5-q8-Qj6" secondAttribute="centerX" id="OYg-Be-mMY"/>
+                            <constraint firstItem="2Tt-ZM-Thv" firstAttribute="centerY" secondItem="2d5-q8-Qj6" secondAttribute="centerY" id="x4m-VO-Yd7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ep1-7y-3mF"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gEO-Sh-e9e"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0vL-d0-fZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1780" y="-251.42428785607197"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Z0z-5z-JZT">
+            <objects>
+                <viewController id="iHR-02-HIi" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="w5e-ra-cKn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.74290666759600865" green="0.96264276649746194" blue="0.84774787003765395" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Wh5-QP-6ar"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IOH-tg-Ckz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2562" y="-251"/>
+        </scene>
+        <!--Main Tab Controller-->
+        <scene sceneID="rl0-Sw-mc9">
+            <objects>
+                <tabBarController storyboardIdentifier="MainTabController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rKy-0T-0uF" customClass="MainTabController" customModule="ShoppingApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="g7d-9X-asg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="FFt-zY-REn" kind="relationship" relationship="viewControllers" id="ENx-yD-Rvs"/>
+                        <segue destination="Vud-us-1A1" kind="relationship" relationship="viewControllers" id="cov-Wj-3rV"/>
+                        <segue destination="who-x7-Smx" kind="relationship" relationship="viewControllers" id="tMT-o3-A88"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GgD-ns-G0l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-113" y="81"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="ALb-R7-3Od">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FFt-zY-REn" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" id="l5W-yF-jpE"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UtU-EJ-Nhb">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ujb-n7-gkb" kind="relationship" relationship="rootViewController" id="mEg-nB-0nq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HUT-t2-pm3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="840.79999999999995" y="-251.42428785607197"/>
         </scene>
     </scenes>
 </document>
